# iot-servicer

./: CMakeLists.txt
application/: CMakeLists.txt  main.cpp
communication/: CMakeLists.txt
communication/include/: Communication.h
communication/protocol/: CMakeLists.txt
communication/protocol/include/: Handshaking.h  Packet.h  Queue.h  Result.h
communication/protocol/src/: Handshaking.cpp  Packet.cpp  Queue.cpp
communication/socket/: CMakeLists.txt
communication/socket/include/: Socket.h  TcpSocket.h
communication/socket/src/: Socket.cpp
communication/src/: Communication.cpp
control/: CMakeLists.txt
control/include/: Control.h
utilities/: CMakeLists.txt
utilities/src/: Timer.cpp
